src/main/java/com/cloudcanards/canardseditor/psi/Canard.bnf
{
    parserClass="com.cloudcanards.canardseditor.parser.CanardParser"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="Canard"
    psiImplClassSuffix="Impl"
    psiPackage="com.cloudcanards.canardseditor.psi"
    psiImplPackage="com.cloudcanards.canardseditor.psi.impl"

    elementTypeHolderClass="com.cloudcanards.canardseditor.psi.CanardTypes"
    elementTypeClass="com.cloudcanards.canardseditor.psi.CanardElementType"
    tokenTypeClass="com.cloudcanards.canardseditor.psi.CanardTokenType"
}

canardFile ::= item*

private item ::= (node|COMMENT|EMPTY)

node ::= (text_node)

text_node ::= [speaker] text_body

speaker ::= AT NAME [emotion_handle]
emotion_handle ::= EMOTION_LEFT_PAREN EMOTION EMOTION_RIGHT_PAREN

text_body ::= (TEXT|SPECIAL_CHAR)+
